@@ -1,3 +1,12 @@
+2019-12-08  Niels Möller  <nisse@lysator.liu.se>
+
+	* x86_64/ecc-curve448-modp.asm (nettle_ecc_curve448_modp): New
+	assembly function.
+	* ecc-448.c (ecc_448_modp) [HAVE_NATIVE_ecc_curve448_modp]: Use
+	native nettle_ecc_curve448_modp if available.
+	* configure.ac (asm_hogweed_optional_list): Add ecc-curve448-modp.asm.
+	(HAVE_NATIVE_ecc_curve448_modp): New config.h define.
+
 2019-12-03  Niels Möller  <nisse@lysator.liu.se>
 
 	* ecc-448.c (ecc_448_modp) [GMP_NUMB_BITS == 64]: New function.
